[gd_scene load_steps=3 format=3 uid="uid://cu2fky2uwpfjd"]

[ext_resource type="Script" path="res://scenes/end scene/end_scene.gd" id="1_m6rwe"]
[ext_resource type="Theme" uid="uid://7fastx4ccd4k" path="res://main_theme.tres" id="2_ski8n"]

[node name="EndScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m6rwe")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 426
theme_override_constants/margin_top = 240
theme_override_constants/margin_right = 426
theme_override_constants/margin_bottom = 240

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopLabel" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_ski8n")
theme_override_font_sizes/font_size = 26
text = "YOU SURVIVED FOR:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SurvivalTime" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_ski8n")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="BotLabel" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_ski8n")
theme_override_font_sizes/font_size = 26
text = "BETTER LUCK NEXT TIME!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="LeftMarginContainer" type="MarginContainer" parent="MarginContainer/GridContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="TryAgainButton" type="Button" parent="MarginContainer/GridContainer/GridContainer/LeftMarginContainer"]
layout_mode = 2
theme = ExtResource("2_ski8n")
text = "TRY AGAIN"

[node name="EmptyMarginContainer" type="MarginContainer" parent="MarginContainer/GridContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="RightMarginContainer" type="MarginContainer" parent="MarginContainer/GridContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="MenuButton" type="Button" parent="MarginContainer/GridContainer/GridContainer/RightMarginContainer"]
layout_mode = 2
theme = ExtResource("2_ski8n")
text = "RETURN
TO MENU"

[connection signal="button_up" from="MarginContainer/GridContainer/GridContainer/LeftMarginContainer/TryAgainButton" to="." method="_on_try_again_button_up"]
[connection signal="button_up" from="MarginContainer/GridContainer/GridContainer/RightMarginContainer/MenuButton" to="." method="_on_menu_button_up"]
